[build-system]
requires = ["setuptools ~= 65.0", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[tool.setuptools]
packages = ["interfaces"]


[project]
name = "canbuslibs"
version = "0.0.1"
authors = [
  { name="RIAPS"},
]
description = "A riaps interface library for Canbus"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Linux",
]
dependencies = [
    "python-can"
]

[project.urls]
"Homepage" = "hhttps://github.com/RIAPS/interface.canbus.libs"
"Bug Tracker" = "https://github.com/RIAPS/interface.canbus.libs/issues"