[build-system]
requires = ["setuptools ~= 65.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

#[tool.setuptools]
#packages = ["interfaces"]

[tool.setuptools.packages.find]
where = ["."]
include = ["interfaces*"]
#exclude = ["etc*", "riaps*"]
#namespaces = false


[project]
name = "canbuslibs"
version = "0.0.1"
authors = [
  { name="RIAPS"},
]
description = "A riaps interface library for Canbus"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Linux",
]
dependencies = [
    "python-can"
]

[project.urls]
"Homepage" = "hhttps://github.com/RIAPS/interface.canbus.libs"
"Bug Tracker" = "https://github.com/RIAPS/interface.canbus.libs/issues"